task-45836 fixed upload photo crop popup haight issue and upload image center aligned issues

--- a/application/views/common-css/3skeleton.css
+++ b/application/views/common-css/3skeleton.css
@@ -5758,7 +5758,7 @@ input.qty {
 }
 
 .preview--profile {
-  margin: 0 0 10px 0;
+  margin: 0 0 10px 0; height: auto;
 }
 
 .preview--profile .btngroup--fix {
